--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.1",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "mongodb": "^6.7.0"
   }
 }
-
